# elder-council-harness

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE-DOCS  NOTICE  README.md  SECURITY.md  START-HERE.md  THREAT_MODEL.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  council_definition_request.md
.github/workflows/: agentic-uat.yml  ci.yml  uat.yml
adapters/: README.md
adapters/claude-code/: settings.snippet.json
adapters/opencode/: eldercouncil.js
docs/: ARCHITECTURE.md  BRAND.md  CLAUDE-CODE-OLLAMA.md  CONCEPT.md  COUNCILS.md  DESIGN-REVIEW.md  DOMAIN-ADAPTATION.md  FAQ.md  GATES.md  GET-STARTED.md  GLOSSARY.md  IDE-SUPPORT.md  LENSES.md  LICENSING.md  LOOP-ENGINEERING.md  METHODOLOGY.md  MODEL-GUIDANCE.md  STANDARDS-MAP.md  TESTING.md
docs/testing/: README.md
eldercouncil/: __init__.py  audit.py  catalog.py  cli.py  config.py  config.toml.example  consensus.py  convene.py  council-models.json  engine.py  gate-policy.yaml  gates.py  harness.py  install.py  lenses.yaml  models.py  paths.py  risk_gate.py  schema.py  server.py
eldercouncil/councils/: business-decision.yaml  code-council.yaml  compliance.yaml  council.schema.json  cyber-risk.yaml  platform-architecture.yaml  supply-chain.yaml  threat-hunting.yaml
eldercouncil/orchestrator/: __init__.py  client.py  providers.py  runner.py
examples/: README.md
examples/code-council/: decision.json  ledger.md
templates/: council-decision-record.md
tests/: conftest.py  test_audit.py  test_cli_journeys.py  test_consensus.py  test_councils.py  test_docs.py  test_engine.py  test_gates.py  test_install.py  test_journeys.py  test_known_bypasses.py  test_orchestrator.py  test_registry.py  test_risk_gate.py  test_server.py
tools/: build_demo.py  build_pdfs.py  build_social_card.py  honesty_check.py
(+18 files in other folders)
