[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eldercouncil"
version = "0.1.0"
description = "Elder Council — a local-first multi-model council harness for high-stakes cyber decisions (risk-gated escalation, consensus tally, hash-chained audit). Six installable cyber councils; BYO-LLM, ships no keys. OWASP-Agentic-aware, NIST-AI-RMF-aligned."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Cyber Elders Pty Ltd" }]
keywords = ["agentic", "council", "governance", "multi-model", "consensus", "risk", "owasp", "nist", "mcp", "claude-code", "opencode", "kiro", "cursor", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
orchestrator = ["anthropic>=0.40", "httpx>=0.27"]   # optional BYO-LLM runner (ships NO keys; reads env)
dev = ["pytest>=8.0"]
pdf = ["reportlab==4.5.1"]   # branded PDF generator (tools/build_pdfs.py); pinned for byte-stable CI output
demo = ["pillow>=10"]    # terminal-demo GIF generator (tools/build_demo.py)

[project.scripts]
eldercouncil = "eldercouncil.cli:main"

[project.urls]
Homepage = "https://github.com/Cyber-Elders/elder-council-harness"
Source = "https://github.com/Cyber-Elders/elder-council-harness"

[tool.hatch.build.targets.wheel]
packages = ["eldercouncil"]
artifacts = [
    "eldercouncil/councils/*.yaml",
    "eldercouncil/lenses.yaml",
    "eldercouncil/council-models.json",
    "eldercouncil/gate-policy.yaml",
    "eldercouncil/config.toml.example",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
